--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -14,7 +14,7 @@
     <section class="chamada">
         <div class="chamada-texto">
             <h1>One Piece: A Serie</h1>
-            <p>#one-piece</p>
+            <p>O jovem pirata Monkey D. Luffy veste o chapéu de palha e, com sua tripulação atrapalhada, na adaptação em live-action do popular</p>
         </div>
 
         <div>
@@ -29,19 +29,19 @@
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=fNppXEVcqUo">
-                <img src="https://img.youtube.com/vi/fNppXEVcqUo/maxresdefault.jpg" />
+                <img class="imagem" src="https://img.youtube.com/vi/fNppXEVcqUo/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=4gXciQ4ZQ74">
-                <img src="https://img.youtube.com/vi/4gXciQ4ZQ74/maxresdefault.jpg" />
+                <img class="imagem" src="https://img.youtube.com/vi/4gXciQ4ZQ74/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=GWqHWhXuI54">
-                <img src="https://img.youtube.com/vi/GWqHWhXuI54/maxresdefault.jpg" />
+                <img class="imagem" src="https://img.youtube.com/vi/GWqHWhXuI54/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=dL0BOduQk38">
-                <img src="https://img.youtube.com/vi/dL0BOduQk38/maxresdefault.jpg" />
+                <img class="imagem" src="https://img.youtube.com/vi/dL0BOduQk38/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=PCGx1bcalTg">
-                <img src="https://img.youtube.com/vi/PCGx1bcalTg/maxresdefault.jpg" />
+                <img class="imagem" src="https://img.youtube.com/vi/PCGx1bcalTg/maxresdefault.jpg" />
             </a>
         </div>
     </section>
